# ukncbtl-cmake

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
renders/: CMakeLists.txt  render-exports.def
renders/dx9/: CMakeLists.txt
renders/opengl/: CMakeLists.txt
renders/sdl/: CMakeLists.txt
renders/vfw/: CMakeLists.txt
ukncbtl/: CMakeLists.txt
